--- a/Dockerfiles/Dockerfile
+++ b/Dockerfiles/Dockerfile
@@ -1,5 +1,5 @@
 FROM postgres
-ENV POSTGRES_DB mydb
-ENV POSTGRES_USER myuser
+ENV POSTGRES_DB mydbyalo
+ENV POSTGRES_USER yalomike
 ENV POSTGRES_PASSWORD mysecretpassword
 COPY init.sql /docker-entrypoint-initdb.d/
