--- a/Dockerfiles/docker-compose.yml
+++ b/Dockerfiles/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   db:
     image: postgres
+    ports:
+      -5432:5432
     restart: always
     environment:
-      POSTGRES_PASSWORD: mysecretpassword
+      POSTGRES_PASSWORD: password
